src/objects/DLI_Site_CC_List__c/DLI_Site_CC_List__c.object-meta.xml
<CustomObject>
    <label>Site CC List</label>
    <nameField>
        <displayFormat>DLISCC-{0000}</displayFormat>
        <label>DLI Site CC List #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site CC List</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>