src/objects/DLI_Site_CC_List__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Site CC List: Contact should be an employee</errorMessage>
        <filterItems>
            <field>Contact.Contact_Is_Employee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site CC List</relationshipLabel>
    <relationshipName>Site_CC_List</relationshipName>
    <type>Lookup</type>
</CustomField>