src/objects/DLI_Site_CC_List__c/fields/Discretionary_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discretionary Line Item</label>
    <referenceTo>Discretionary_Line_Item__c</referenceTo>
    <relationshipLabel>Site CC List</relationshipLabel>
    <relationshipName>Site_CC_List</relationshipName>
    <type>Lookup</type>
</CustomField>